compiler/tests-spec/testData/psi/linked/constant-literals/boolean-literals/p-1/neg/2.12.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-draft
 * PLACE: constant-literals, boolean-literals -> paragraph 1 -> sentence 2
 * NUMBER: 12
 * DESCRIPTION: The use of Boolean literals as the identifier (without backtick) in the setter.
 * NOTE: this test data is generated by FeatureInteractionTestDataGenerator. DO NOT MODIFY CODE MANUALLY!
 */

class A {
    var x1: String
        set(private true) = false

    var x2: String
        set(abstract final true) {
            return field
        }
}

var x3 = 0L
    set(suspend false) {
        return field
    }
